--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/src/untils/contextmenu.css">
   <title>Vite App</title>
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <!-- 页面右键菜单 -->
+  <script src="/src/untils/contextmenu.js"></script>
 </body>
 
 </html>
