--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/src/assets/images/ljzy.png" />
+  <link rel="icon" href="/src/assets/icon/橘子.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/untils/contextmenu.css">
+  <link rel="stylesheet" href="/src/assets/font/font.css">
+  <link rel="stylesheet" href="/src/assets/css/index.css">
+  <link rel="stylesheet" href="/src/assets/css/tailwind.css">
+  <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css">
   <title>小栈</title>
 </head>
 
-<body>
+<body class="loading" style="overflow: auto !important">
   <div id="app"></div>
+  <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+  <script type="module" src="/src/assets/iconFont/iconfont.js"></script>
   <script type="module" src="/src/main.js"></script>
   <!-- 页面右键菜单 -->
-  <script src="/src/untils/contextmenu.js"></script>
+  <!-- <script src="/src/untils/contextmenu.js"></script> -->
 </body>
 
 </html>
