完成文章编辑和发布、音乐播放器问题、更换天气api、获取ip方式、压缩文章上传的图片、替换富文本

--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/utils/contextmenu.css">
   <link rel="stylesheet" href="/src/assets/font/font.css">
-  <link src="https://at.alicdn.com/t/c/font_3656498_tsw9b3dmwra.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
   <link rel="stylesheet" href="/src/assets/css/tailwind.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.css">
-
-  <!-- <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css"> -->
+  <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css">
   <title>小栈</title>
   <style>
     /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
     @font-face {
       font-family: 'iconfont';
       /* Project id 3656498 */
-      src: url('//at.alicdn.com/t/c/font_3656498_ka5keziszkn.woff2?t=1665807712891') format('woff2'),
-        url('//at.alicdn.com/t/c/font_3656498_ka5keziszkn.woff?t=1665807712891') format('woff'),
-        url('//at.alicdn.com/t/c/font_3656498_ka5keziszkn.ttf?t=1665807712891') format('truetype'),
-        url('//at.alicdn.com/t/c/font_3656498_ka5keziszkn.svg?t=1665807712891#iconfont') format('svg');
+      src: url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff2?t=1667010892131') format('woff2'),
+        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff?t=1667010892131') format('woff'),
+        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.ttf?t=1667010892131') format('truetype'),
+        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.svg?t=1667010892131#iconfont') format('svg');
     }
 
   </style>
@@ -30,10 +28,11 @@
 
 <body class="loading" style="overflow: auto !important">
   <div id="app"></div>
-  <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://at.alicdn.com/t/c/font_3656498_ka5keziszkn.js"></script>
   <!-- <script type="module" src="/src/assets/iconFont/iconfont.js"></script> -->
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.ts"></script>
   <!-- 页面右键菜单 -->
   <!-- <script src="/src/utils/contextmenu.js"></script> -->
 </body>
