关闭实时显示时间

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- <script type="module" src="/src/assets/iconFont/iconfont.js"></script> -->
   <script type="module" src="/src/main.ts"></script>
   <!-- 页面右键菜单 -->
-  <script src="/src/utils/contextmenu.ts" type="module"></script>
+  <!-- <script src="/src/utils/contextmenu.ts" type="module"></script> -->
 </body>
 
 </html>
