--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/src/assets/css/tailwind.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
   <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css">
+  <link rel="stylesheet" href="/src/assets/css/animation.css">
   <title>小栈</title>
   <style>
     /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
