--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/src/assets/icon/橘子.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/src/utils/contextmenu.css">
+  <link rel="stylesheet" href="/src/assets/css/contextmenu.css">
   <link rel="stylesheet" href="/src/assets/font/font.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
   <link rel="stylesheet" href="/src/assets/css/tailwind.css">
