优化内存、删除不必要的依赖、顶部导航栏ui修改、修改部分动画效果、导入Animate动画库、图标组件

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="/src/assets/css/contextmenu.css">
   <link rel="stylesheet" href="/src/assets/font/font.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
-  <link rel="stylesheet" href="/src/assets/css/tailwind.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
   <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css">
   <link rel="stylesheet" href="/src/assets/css/animation.css">
-  <title>小栈</title>
+  <link rel="stylesheet" href="/src/assets/css/animate.min.css">
+  <title>Jz 恰沐春风共同游，终只叹，木已舟</title>
   <style>
     /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
     @font-face {
@@ -24,7 +24,6 @@
         url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.ttf?t=1667010892131') format('truetype'),
         url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.svg?t=1667010892131#iconfont') format('svg');
     }
-
   </style>
 </head>
 
