--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
   <link rel="stylesheet" href="/src/assets/font/font.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
-  <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css">
+  <!-- <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css"> -->
   <link rel="stylesheet" href="/src/assets/css/animation.css">
   <link rel="stylesheet" href="/src/assets/css/animate.min.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3656498_wrp5km41k7.css">
+
   <title>Jz 恰沐春风共同游，终只叹，木已舟</title>
-  <style>
-    /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
-    @font-face {
-      font-family: 'iconfont';
-      /* Project id 3656498 */
-      src: url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff2?t=1667010892131') format('woff2'),
-        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff?t=1667010892131') format('woff'),
-        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.ttf?t=1667010892131') format('truetype'),
-        url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.svg?t=1667010892131#iconfont') format('svg');
-    }
-  </style>
 </head>
 
 <body class="loading" style="overflow: auto !important">
