新增开发配置与打包配置、修改所有接口、停止使用阿里妈妈字体、删除不用的静态资源文件、字体文件修改

--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
   <link rel="icon" href="/src/assets/icon/橘子.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/assets/css/contextmenu.css">
-  <link rel="stylesheet" href="/src/assets/font/font.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
   <!-- <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css"> -->
   <link rel="stylesheet" href="/src/assets/css/animation.css">
   <link rel="stylesheet" href="/src/assets/css/animate.min.css">
-  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3656498_wrp5km41k7.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3656498_6bnscii4iou.css">
 
   <title>Jz 恰沐春风共同游，终只叹，木已舟</title>
 </head>
 
 <body class="loading" style="overflow: auto !important">
   <div id="app"></div>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="https://at.alicdn.com/t/c/font_3656498_ka5keziszkn.js"></script>
-  <!-- <script type="module" src="/src/assets/iconFont/iconfont.js"></script> -->
   <script type="module" src="/src/main.ts"></script>
   <!-- 页面右键菜单 -->
   <!-- <script src="/src/utils/contextmenu.ts" type="module"></script> -->
