修改ui比例问题

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
 
   <link rel="icon" href="/src/assets/icon/橘子.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta data-n-head="ssr" name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="stylesheet" href="/src/assets/css/contextmenu.css">
   <link rel="stylesheet" href="/src/assets/css/index.css">
   <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
