修复样式、新增自动导入

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Jz 恰沐春风共同游，终只叹，木已舟</title>
 </head>
 
-<body class="loading" style="overflow: auto !important">
+<body class="loading">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
   <!-- 页面右键菜单 -->
