修改博客首页UI、新增页脚、调整详情页的目录结构

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta data-n-head="ssr" name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="stylesheet" href="/src/assets/css/contextmenu.css">
-  <link rel="stylesheet" href="/src/assets/css/index.css">
-  <link rel="stylesheet" href="/src/assets/css/elementLzy.less">
+  <link rel="stylesheet" href="/src/assets/css/index.scss">
+  <link rel="stylesheet" href="/src/assets/css/elementLzy.scss">
   <!-- <link rel="stylesheet" href="/src/assets/iconFont/iconfont.css"> -->
   <link rel="stylesheet" href="/src/assets/css/animation.css">
   <link rel="stylesheet" href="/src/assets/css/animate.min.css">
